--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "pug": "^2.0.0-beta6",
     "pug-loader": "^2.3.0",
     "jquery": "3.2.1",
+    "jquery-migrate": "3.0.0",
     "json-loader": "^0.5.4",
     "jsoneditor": "4.1.2",
     "nib": "^1.1.0",
